fix linking on iPhone page

--- a/public/v2/css/all.css
+++ b/public/v2/css/all.css
@@ -343,11 +343,14 @@ form,fieldset{
 }
 .sell-table.iphone{
 	width:938px;
-	margin:34px 0 -55px 1px;
+	margin:34px 0 -27px 1px;
 	position:relative;
 	z-index:2;
 }
-.sell-table.iphone img{padding:29px 0 0;}
+.sell-table.iphone img{
+	padding:29px 0 0;
+	margin:0;
+}
 .items-holder .sell-table.iphone{margin:0;}
 .sell-table tbody td,
 .sell-table.iphone td{
@@ -379,7 +382,7 @@ form,fieldset{
 	line-height:24px;
 	font-weight:600;
 	letter-spacing:-2px;
-	padding:5px 12px 13px;
+	padding:5px 12px 0;
 	border-width:0 0 0 1px;
 }
 .sell-table.iphone td{
@@ -399,6 +402,8 @@ form,fieldset{
 	text-align:left;
 	width:55px;
 	line-height:20px;
+	position:relative;
+	z-index:200;
 }
 .sell-table.iphone .type strong{font-weight:700;}
 .sell-table.iphone + .items-holder{padding:0;}
@@ -409,6 +414,8 @@ form,fieldset{
 	padding:5px 0;
 	margin:5px 2px 0 0;
 	white-space:nowrap;
+	position:relative;
+	z-index:200;
 }
 .sell-table.iphone .sell{letter-spacing:-1px \0/;}
 :root .sell-table.iphone .sell{letter-spacing:0 \0/IE9;}
